# kafka-log

./: .gitignore  01-log_gen_guide.md  02-mysql-dbtable.md  03-contents-start패턴.md  04-sink저장로직.md  05-로그발생양식.md  06-mysql-변경사항.md  README.md  db_connector.py  fast_log_server.py  local_log_server.py  log_creator.py  log_info.py  log_scehduler.py  main.py  pyproject.toml  update_users.py  user_agent_generator.py  user_controller.py  user_creator.py
config/: config.toml
generator_ver02/config/: config.toml  pyproject.toml
generator_ver02/schemas/: __init__.py  models.py
generator_ver02/src/: db_client.py  log_sink.py
mock_db/: init_schema.sql  mock_table_parquet.py  ott_test.db  seed_data.py
mock_db/mock_table/: subscription_plans.parquet  tmdb_contents.parquet  user_likes.parquet  user_subscriptions.parquet
mock_db/table_file/: subscription_plans.parquet  tmdb_contents.parquet  user_likes.parquet  user_subscriptions.parquet
schemas/: enum.py  enums.py  log_detail_schemas.py
src/: date_generator.py  db_client.py  log_contents.py  log_date_generator.py  log_events.py  log_sink.py  user_controller.py  user_register.py  user_selector.py
